# ssimulacra2-rs-bindings

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  NOTICES  README.md  build.rs  build.zig  pyproject.toml  ssim.py
.github/workflows/: ci.yml
src/: bindings.rs  lib.rs  pixels.rs
src-maturin/ssimulacra2/: __init__.py  _ssimulacra2.pyi
