[package]
name = "ssimulacra2-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_ssimulacra2"
crate-type = ["cdylib"]

[dependencies]
# When updating, make sure to keep in sync in README.md
ssimulacra2 = { version = "=0.5.1", features = ["rayon"], default-features = false }

pyo3 = { version = "0.27.2", features = ["extension-module", "generate-import-lib"] }
rayon = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
